tests/invalid_nodepend/invalid_main.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module invalid_main.
:- import_module io.
:- interface.

:- pred main(int::di, int::out) is multi.

:- implementation.

main(!IO).
